seperation of concern

--- a/index.html
+++ b/index.html
@@ -59,39 +59,21 @@
           </div>
 
 
-          <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-          <a class="next" onclick="plusSlides(1)">&#10095;</a>
+          <a class="previous-arrow" onclick="plusSlides(-1)">&#10094;</a>
+          <a class="next-arrow" onclick="plusSlides(1)">&#10095;</a>
 
         </div>
 
         <br>
         <div style="text-align:center">
-          <span class="dot" onclick="currentSlide(1)"></span>
-          <span class="dot" onclick="currentSlide(2)"></span>
-          <span class="dot" onclick="currentSlide(3)"></span>
+          <span class="bullet" onclick="currentSlide(1)"></span>
+          <span class="bullet" onclick="currentSlide(2)"></span>
+          <span class="bullet" onclick="currentSlide(3)"></span>
         </div>
 
-        <script src = myslideshow.js>
+        <script defer src=myslideshow.js>
 
-// var j =0;
-// var images = [];
-// var time = 1000;
-
-// images [0]= 'images/bulwara_road.jpg';
-// images [1]= 'images/fig_street.jpg'; 
-// images [3]= 'images/jones_street.jpg';
-
-// function changeImg () {
-//   document.slide.src =images[j]
-//   if (j<images.length -1){
-//     j++}
-//     else{
-//       j=0;
-//     }
-//     setTimeout ("changeImg()", time);
-//   }
-//   window.onload = changeImg;
-    </script>
+        </script>
 
     </main>
     <footer>
