--- a/faq.html
+++ b/faq.html
@@ -58,27 +58,8 @@
 </dl>
 
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-<script>
-$(document).ready(function(){
-  $("#question1").click(function(){
-    $("#answer1").fadeToggle();
-  });
-  $("#question2").click(function(){
-    $("#answer2").fadeToggle();
-  });
-  $("#question3").click(function(){
-    $("#answer3").fadeToggle();
-  });
-  $("#question4").click(function(){
-    $("#answer4").fadeToggle();
-  });
-  $("#question5").click(function(){
-    $("#answer5").fadeToggle();
-  });
-});
-
-</script>
+<script defer src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script defer src=faq.js>  </script>
 </main>
 
 <footer>
