edit conctact form

--- a/contact.html
+++ b/contact.html
@@ -60,9 +60,9 @@
           <p> *- required filed</p>
 
           <label> Do you want to Buy or Sell or Rent?</label>
-          <Label for="buy" class="inlin-radios"> Buy:</Label> <input type="radio" id="buy" values="buy" name="type_of_deal" required>
-          <Label for="sell" class="inlin-radios" > Sell: </Label> <input type="radio" id="sell" values="sell" name="type_of_deal" required>
-          <Label for="rent" class="inlin-radios"> Rent:</Label><input type="radio" id="rent" values="rent" name="type_of_deal" required>
+          <Label for="buy" class="inlin-radios"> Buy:</Label> <input type="radio" id="buy" values="buy" name="type_of_deal" >
+          <Label for="sell" class="inlin-radios" > Sell: </Label> <input type="radio" id="sell" values="sell" name="type_of_deal">
+          <Label for="rent" class="inlin-radios"> Rent:</Label><input type="radio" id="rent" values="rent" name="type_of_deal" >
 
           <label> What property type/s are you interested in?</label>
           <label for="unit" class="inlin-checkbox">Unit: </label> <input type="checkbox" id="unit" name="typeProperty" value="unit" >
@@ -71,7 +71,7 @@
           <label for="house" class="inlin-checkbox" > House: </label><input type="checkbox" id="house" name="typeProperty" value="house" >
 
           <label for="bedroomNumbers"> How many bedrooms do you require?</label>
-          <input type="number" id="bedroomNumbers" name="bedroomNumbers"  required>
+          <input type="number" id="bedroomNumbers" name="bedroomNumbers" >
 
           <label for="comments"> Comments</label>
           <textarea type="text" id="comments" name="comments"> </textarea> <br>
